# ClaimRiskPredictor

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_STREAMLIT.md  LICENSE  README.md  api.py  app.py  causal_analysis.py  data_loader.py  generative_augmentation.py  main.py  model.py  pyproject.toml  requirements-streamlit.txt  requirements-vercel.txt  requirements.txt  setup.py  streamlit_app.py  vercel-minimal.json  vercel.json  vercel_app.py  vercel_minimal.py
.claude/: settings.local.json
.streamlit/: config.toml
config/: config.yaml
data/: insurance_claims.csv
src/insurance_fraud_detector/: __init__.py
src/insurance_fraud_detector/api/: __init__.py
src/insurance_fraud_detector/data/: __init__.py  preprocessor.py
src/insurance_fraud_detector/models/: __init__.py  predictor.py
src/insurance_fraud_detector/training/: __init__.py  trainer.py
src/insurance_fraud_detector/utils/: __init__.py  config.py  logger.py
